<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context="es.elb4t.masterlistas.InicioSesionActivity">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/registro_de_usuario"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minHeight="?android:attr/actionBarSize"
            android:transitionGroup="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titulo">

            <EditText
                android:id="@+id/usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo_electronico"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textSize="14dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minHeight="?android:attr/actionBarSize"
            android:transitionGroup="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_usuario">

            <EditText
                android:id="@+id/reg_contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrasena"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:textSize="14dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_verificar_contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minHeight="?android:attr/actionBarSize"
            android:transitionGroup="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_contraseña">

            <EditText
                android:id="@+id/reg_verificar_contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/verificar_contrase_a"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textSize="14dp" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/reg_mostrar_contrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:onClick="mostrarContraseña"
            android:text="@string/mostrar_contrasena"
            android:textColor="@android:color/darker_gray"
            android:textSize="12dp"
            app:layout_constraintTop_toBottomOf="@+id/til_verificar_contraseña"/>

        <Button
            android:id="@+id/butt_acceder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:background="@drawable/ripple"
            android:elevation="2dp"
            android:onClick="registro"
            android:text="@string/registrar_usuario"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/butt_borrar"
            app:layout_constraintTop_toBottomOf="@+id/reg_mostrar_contrasena"
            tools:layout_editor_absoluteY="285dp" />

        <Button
            android:id="@+id/butt_borrar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:background="@drawable/ripple"
            android:clickable="true"
            android:elevation="2dp"
            android:onClick="borrarCampos"
            android:text="@string/borrar"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toRightOf="@+id/butt_acceder"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/butt_acceder" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>